# SmolVLA-MuJoCo

./: README.md  pyproject.toml  requirements.txt  setup.py
configs/: base_config.yaml  benchmark.yaml  desktop_sorting_showcase.yaml  eval_config.yaml  finetune_libero.yaml
docs/: desktop_sorting_showcase.md  eval_log_format.md  mujoco_scene_task_spec.md  project_roadmap.md
docs/advanced/: lerobot_smolvla_track.md
docs/overview/: desktop_sorting_showcase.md  eval_log_format.md  mujoco_scene_task_spec.md
docs/reference/: eval_artifact_schema.md  mujoco_scene_task_spec.md
docs/results/: latest_real_results.md
docs/tutorials/: run_mock_showcase.md  run_real_libero.md
examples/: desktop_sorting_eval_log.jsonl  desktop_sorting_eval_summary.csv  mock_desktop_sorting_eval_log.jsonl  real_benchmark_results.csv  sample_results.csv
notebooks/: colab_smolvla_libero.ipynb  kaggle_smolvla_libero.ipynb
reports/sample/: summary.md
scripts/: .bootstrap_lerobot.sh.swp  analyze_results.py  bootstrap_lerobot.sh  desktop_grasp_sort.py  download_data.sh  eval_libero_smolvla.sh  export_readme_assets.py  promote_real_results.py  run_eval_all.sh  run_finetune.sh  run_mock_benchmark.py  run_showcase_demo.py  train_custom_smolvla.sh  train_libero_smolvla.sh
src/: __init__.py
src/data/: __init__.py  dataset_loader.py  language_augmentation.py
src/env/: __init__.py  mujoco_env.py  visual_perturbation.py
src/evaluation/: __init__.py  chunking_ablation.py  efficiency_benchmark.py  (+3 more)
templates/: desktop_sorting_prompts.yaml
tests/: test_real_results.py  test_showcase.py
(+36 files in other folders)
